test/tests/stages/18_structures/invalid_types/extra_credit/incomplete_unions/define_incomplete_union.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[7]:
  union
  identifier(u)
  ;
  union
  identifier(u)
  identifier(my_union)
  ;
